crates/cli/src/snapshots/cargo_php__static_glue__tests__config_m4_links_prebuilt_staticlib_and_registers_static_extension.snap
---
source: crates/cli/src/static_glue.rs
expression: "render_config_m4(\"my_ext\", \"my_lib\")"
---
dnl Generated by `cargo php static-glue`. Do not edit.
PHP_ARG_ENABLE([my_ext],
  [whether to enable my_ext],
  [AS_HELP_STRING([--enable-my_ext], [Enable the my_ext Rust extension])],
  [no])

if test "$PHP_MY_EXT" != "no"; then
  if test "$ext_shared" = "yes"; then
    AC_MSG_ERROR([my_ext only supports static linking; use --enable-my_ext without =shared])
  fi

  if test -z "$MY_EXT_RUST_LIB_DIR"; then
    MY_EXT_RUST_LIB_DIR="$abs_srcdir/ext/my_ext"
  fi

  AC_MSG_CHECKING([for libmy_lib.a])
  if test ! -f "$MY_EXT_RUST_LIB_DIR/libmy_lib.a"; then
    AC_MSG_ERROR([libmy_lib.a not found in $MY_EXT_RUST_LIB_DIR. Build it first (EXT_PHP_RS_STATIC_EXT=1 cargo build --release) and copy it there, or set MY_EXT_RUST_LIB_DIR.])
  fi
  AC_MSG_RESULT([$MY_EXT_RUST_LIB_DIR/libmy_lib.a])

  PHP_ADD_LIBRARY_WITH_PATH([my_lib], [$MY_EXT_RUST_LIB_DIR])
  EXTRA_LIBS="$EXTRA_LIBS -lpthread -ldl -lm"

  PHP_NEW_EXTENSION([my_ext], [my_ext_glue.c], [no])
fi
