crates/cli/src/snapshots/cargo_php__static_glue__tests__glue_copies_get_module_into_static_entry_before_main.snap
---
source: crates/cli/src/static_glue.rs
expression: "render_glue_c(\"my_ext\")"
---
/* Generated by `cargo php static-glue`. Do not edit. */
#include "php_my_ext.h"

/* Exported by the Rust staticlib (#[php_module]). */
extern zend_module_entry *get_module(void);

zend_module_entry my_ext_module_entry;

__attribute__((constructor))
static void my_ext_fill_module_entry(void) {
	my_ext_module_entry = *get_module();
}
