crates/cli/src/snapshots/cargo_php__static_glue__tests__glue_symbol_prefix_comes_from_lib_target_not_ext_name.snap
---
source: crates/cli/src/static_glue.rs
expression: "render_glue_c(\"my_ext\", \"my_lib\")"
---
/* Generated by `cargo php static-glue`. Do not edit. */
#include "php_my_ext.h"

/* Exported by the Rust staticlib (#[php_module]). Crate-prefixed to
   avoid colliding with other extensions' get_module. */
extern zend_module_entry *my_lib_get_module(void);

zend_module_entry my_ext_module_entry;

__attribute__((constructor))
static void my_ext_fill_module_entry(void) {
	my_ext_module_entry = *my_lib_get_module();
}
