crates/cli/src/snapshots/cargo_php__static_glue__tests__header_declares_module_entry_and_phpext_ptr.snap
---
source: crates/cli/src/static_glue.rs
expression: "render_header(\"my_ext\")"
---
/* Generated by `cargo php static-glue`. Do not edit. */
#ifndef PHP_MY_EXT_H
#define PHP_MY_EXT_H

#include "php.h"

extern zend_module_entry my_ext_module_entry;
#define phpext_my_ext_ptr &my_ext_module_entry

#endif /* PHP_MY_EXT_H */
